1. 新增藥品差異比對邏輯。 2. 修正醫令項目與執行量報表SQL有 OWN_EXPENSE > 0 的條件。